# medoc_marathon

./: README.md  pyproject.toml
data/: Medoc Marathon 2025.kmz  medoc2025.csv  medoc_marathon_complete_route.csv
src/: __init__.py  main.py
src/css/: logo.css
src/services/: __init__.py  data_processing.py  kml_processor.py  map_service.py  optimization.py
src/ui/: __init__.py  ui_components.py
src/utils/: __init__.py  helpers.py
