[project]
name = "medoc-marathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopy>=2.4.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "scipy>=1.15.3",
    "streamlit>=1.28.0",
    "folium>=0.14.0",
    "streamlit-folium>=0.15.0",
    "plotly>=5.17.0",
]
